1. 支持github拉取代码 2. 增强语法检测 3. 支持长时间运行